--- a/index.html
+++ b/index.html
@@ -2,26 +2,22 @@
 <html lang="pl">
     <head>
         <meta charset="UTF-8" >
-        <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
         <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="css/main.css" />
+        <title>LU Factorization Algorithm</title>
     </head>
     <body>  
+        
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
           <a class="navbar-brand" href="#">LU-Factorization</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a class="about_me" href="#about_me">About Me</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -30,13 +26,16 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <h1>Lu Factorization algorithm</h1>
+        <p class="lead"></p>
       </div>
 
     </div><!-- /.container -->
-
+        <div id="about_me--dialog" style="display:none" title="Program przygotował">Adam Graliński<br/>index: 108579<br/>Przedmiot: Elementy Analizy Numerycznej</div>
         <script src="js/angular.js"></script>
+        <script src="js/jquery.min.js"></script>
+        <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
         <script src="js/bootstrap.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
