--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a class="about_me" href="#about_me">About Me</a></li>
+            <li><a class="about_me" href="#">About Me</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -28,6 +27,10 @@
       <div class="starter-template">
         <h1>Lu Factorization algorithm</h1>
         <p class="lead"></p>
+            <div data-ng-app="">
+              <p>Name: <input type="text" data-ng-model="name"></p>
+              <p data-ng-bind="name"></p>
+            </div>
       </div>
 
     </div><!-- /.container -->
