Finished simple way to resolve matrix. Without randomize.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       </div>
     </div><!-- /.container -->
         <div id="about_me--dialog" style="display:none" title="Program przygotował">Adam Graliński<br/>index: 108579<br/>Przedmiot: Elementy Analizy Numerycznej</div>
+        <script src="js/js-num.js"></script>
         <script src="js/angular.js"></script>
         <script src="js/jquery.min.js"></script>
         <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
