working matrixs randomize function

--- a/matrix.html
+++ b/matrix.html
@@ -9,6 +9,7 @@
 
         <button class="toFill" ng-click="draw()">Next</button>
         <button class="reset" ng-click="refresh()">Clear</button>
+        <button class="reset" ng-click="randomize()">Randomize</button>
 
     </fieldset>
 </form>
